# Musics2Video

./: .gitignore  LICENCE.txt  README.md  pyproject.toml
.github/workflows/: publish.yml  pylint.yml
musics2video/: __init__.py  color.py  configs.py  logger.py  m2v.py  main.py
musics2video/renderer/: __init__.py  html2image_renderer.py
musics2video/templates/classic/: style.css  template.html
musics2video/templates/modern/: style.css  template.html
musics2video/video_utils/: __init__.py  download.py  generate_img.py  get_data.py  get_local.py  get_title.py  merge.py
