[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "musics2video"
version = "0.1.0"
description = "A Python cli tool for generating your own music playlist video"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENCE.txt"]
dependencies = [
    "typer",
    "tqdm",
    "html2image",
    "Pillow",
    "pydub",
    "ytmusicapi",
    "yt-dlp"
]
authors = [
    {name = "shrimp2845", email = "goldencheng15@gmail.com"}
]
keywords = ["music", "video", "ffmpeg", "yt-dlp", "playlist", "renderer"]

classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/shrimp2845-tw/Musics2Video"
Repository = "https://github.com/shrimp2845-tw/Musics2Video"

[project.scripts]
musics2video = "musics2video.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["musics2video*"]

[tool.setuptools.package-data]
"musics2video" = ["templates/**/*"]